# pyhadron

./: .gitignore  LICENSE  README.md  cf.py  conversion.py  from_R.py  gen_Rhadron.py  gen_Rwrap.py  hadron.py  hadron_functions.py  hadron_info.py  import_R_functions.py  import_hadron_functions.py  info.yaml  install.md  install.sh  pyhadron.py  pyproject.toml  setup.py  to_R.py
Rwrap/: base.py  compositions.py  graphics.py  hadron.py  lib_loc.py
convert/: from_python.py
doc/: main.md  tutorial.md
examples/: cf_orig.py  jaccknife_cov.py  jackknife_cov.py  mp_fit.py  particle_fit.py
hadron/: README.md  clean_up.sh  dependencies.R  gen_scripts.py  info.yaml  install_hadron.sh
legacy/: cf.py
pyhadron/: R_warnings.py  __init__.py  info.yaml
pyhadron/convert/: __init__.py  from_R.py  from_python.py
src/pyhadron.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: cf_orig.py  jackknife_cov.py  particle_fit.py
