[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhadron"
version = "0.0.1"
authors = [
  { name="Simone Romiti", email="simone.romiti.1994@gmail.com" },
]
description = "A python wrapper for the `hadron` library: https://github.com/HISKP-LQCD/hadron"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: GNU-Linux",
]

[project.urls]
"Homepage" = "https://github.com/simone-romiti/pyhadron"
"Bug Tracker" = "https://github.com/simone-romiti/pyhadron/issues"
